
 - added Visench C1K (using serial port converter with USB ID `1a86:7523`)
   as known supported by `nutdrv_qx` (Megatec protocol) since at least
   NUT v2.7.4 release [#2395]

 - usbhid-ups updates:
   * Support of the `onlinedischarge_log_throttle_hovercharge` in the NUT
     v2.8.2 release was found to be incomplete. [#2423, follow-up to #2215]

 - USB drivers could log `(nut_)libusb_get_string: Success` due to either
   reading an empty string or getting a success code `0` from libusb.
   This difference should now be better logged, and not into syslog. [#2399]

 - upsmon:
   * it was realized that the `POWERDOWNFLAG` must be explicitly set in the
     configuration file, there is no built-in default in the binary program
     (the settings facilitated by the `configure` script during build "only"
     impact the `upsmon.conf.sample`, init-scripts and similar files generated
     from templates). [issue #321, PR #2383]
   * added an `OBLBDURATION` (seconds) setting to optionally delay raising
     the alarm for immediate shutdown in critical situation. [#321]

 - gamatronic driver revised for safer memory operations; this was reported
   to have fixed a Segmentation Fault seen in earlier NUT releases with
   some of the devices supported by this driver. [#2427]

 - upsd:
   * `upsd_cleanup()` is now traced, to more easily see that the daemon is
     exiting (and/or start-up has aborted due to configuration or run-time
     issues). Warning about "world readable" files clarified. [#2417]

 - common code: root-owned daemons now use not the hard-coded `PIDPATH` value
   set by the `configure` script during build, but can override it with a
   `NUT_PIDPATH` environment variable in certain use-cases (such as tests).
   [#2407]

 - brought keyword dictionaries of `nutconf` and `augeas` NUT configuration
   file parsers up to date; restored automated checks for `augeas` lenses.
   [issue #657, issue #2294]
+